@@ -23,3 +23,6 @@ and solution info (if available). Remove unpopulated compatibility level.
 Fix faulty feature finder to continue, and allow skipping
 
 ** Aug 27, 2013 - RELEASE v 2.3: "FeatureAdmin for SharePoint 2013 - v2.4" **
+
+** Aug, 2015 - Perry
+Check AdminService webapps also
